# sieve_group_seqs

./: .gitignore  Cargo.toml  README.md
resources/: b003277.txt  b054395.txt  b054396.txt  b054397.txt  b055561.txt  b135850.txt  b249550.txt  b373648.txt  b373649.txt  b373650.txt
src/: group_count_filters.rs  main.rs  segment_sieves.rs
